changes from sunday afternoon

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></td>
-                             <td>713-903-6177</td>
+                             <td>713-906-6177</td>
                          </tr>
                      </tbody>
                     </table>
@@ -119,7 +119,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-clock-o fa-2x" aria-hidden="true"></i></td>
-                             <td>9:00 AM - 5:00 PM CST (M - F)</td>
+                             <td>9:00 AM - 5:00 PM CST <br/> ( Mon - Fri )</td>
                          </tr>
                      </tbody>
                     </table>
@@ -152,7 +152,7 @@
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('#btnSubmit').click(function() {
