--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Civil Engineering</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/civil.jpg" alt="" height="180">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                        <!--    <img class="lazy img-responsive" data-original="img/civil.jpg" alt="" height="180">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -93,9 +93,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Architecture</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/architecture.jpg" alt="">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                            <!--<img class="lazy img-responsive" data-original="img/architecture.gif" alt="">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -115,9 +115,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Platting</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/plat.jpg" alt="">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                        <!--    <img class="lazy img-responsive" data-original="img/plat.jpg" alt="">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -140,9 +140,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>MEP</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/mep.jpg" alt="">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                        <!--    <img class="lazy img-responsive" data-original="img/mep.jpg" alt="">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -162,9 +162,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Structural</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/structural.jpg" alt="">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                        <!--    <img class="lazy img-responsive" data-original="img/structural.jpg" alt="">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Foundation Design</li>
                             <li>Concrete, Steel & Timber Design</li>
@@ -184,9 +184,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Permit Co-ordination</h4></div>
                       <div class="panel-body">
-                        <div class="img-stripe-border">
-                            <img class="lazy img-responsive" data-original="img/permit.jpg" alt="">
-                        </div>
+                        <!--<div class="img-stripe-border">-->
+                        <!--    <img class="lazy img-responsive" data-original="img/permit.jpg" alt="">-->
+                        <!--</div>-->
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -230,7 +230,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></td>
-                             <td>713-903-6177</td>
+                             <td>713-906-6177</td>
                          </tr>
                      </tbody>
                     </table>
@@ -246,7 +246,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-clock-o fa-2x" aria-hidden="true"></i></td>
-                             <td>9:00 AM - 5:00 PM CST (M - F)</td>
+                             <td>9:00 AM - 5:00 PM CST <br/>( Mon - Fri )</td>
                          </tr>
                      </tbody>
                     </table>
