--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                       <div class="panel-heading"><h4>Four Point</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
-                            <img class="img-responsive" src="../img/projects/Four-points.jpg" alt="">
+                            <img class="img-responsive" src="/img/projects/Four-points.jpg" alt="">
                         </div>
                       </div>
                     </div>
@@ -77,7 +77,7 @@
                       <div class="panel-heading"><h4>Montessori</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
-                            <img class="img-responsive" src="../img/projects/Montessori.jpg" alt="">
+                            <img class="img-responsive" src="/img/projects/Montessori.jpg" alt="">
                         </div>
                       </div>
                     </div>
@@ -87,7 +87,7 @@
                       <div class="panel-heading"><h4>Shipley</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
-                            <img class="img-responsive" src="../img/projects/Shipley.jpg" alt="">
+                            <img class="img-responsive" src="/img/projects/Shipley.jpg" alt="">
                         </div>
                       </div>
                     </div>
@@ -100,7 +100,7 @@
                       <div class="panel-heading"><h4>HIE</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
-                            <img class="img-responsive" src="../img/projects/HIE.jpg" alt="">
+                            <img class="img-responsive" src="/img/projects/HIE.jpg" alt="">
                         </div>
                       </div>
                     </div>
@@ -110,21 +110,21 @@
                       <div class="panel-heading"><h4>Gayatri</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
-                            <img class="img-responsive" src="../img/projects/Gayatri.jpg" alt="">
+                            <img class="img-responsive" src="/img/projects/Gayatri.jpg" alt="">
                         </div>
                       </div>
                     </div>
                 </div>
-                <!--<div class="col-md-4">-->
-                <!--    <div class="panel panel-default margin-bottom-40">-->
-                <!--      <div class="panel-heading"><h4>Permit Co-ordination</h4></div>-->
-                <!--      <div class="panel-body">-->
-                <!--        <div class="img-stripe-border">-->
-                <!--            <img class="img-responsive" src="img/permit.jpg" alt="">-->
-                <!--        </div>-->
-                <!--      </div>-->
-                <!--    </div>-->
-                <!--</div>-->
+                <div class="col-md-4">
+                    <div class="panel panel-default margin-bottom-40">
+                      <div class="panel-heading"><h4>Popeyes</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="/img/projects/Popeyes.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -142,7 +142,7 @@
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
