--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <title>CTG, INC. - Services</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <link href="css/base.css" rel="stylesheet">
@@ -63,8 +63,8 @@
     <div class="container page-content-section">
         <div class="services-content">
             <section class="margin-bottom-40" id="civil">
-                <h2 class="section-headings">CIVIL ENGINEERING</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>CIVIL ENGINEERING</h4></div>
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -81,7 +81,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul>
                                 <li>Site Master Planning
                                     <ul>
@@ -105,8 +104,8 @@
                 </div>
             </section>
             <section class="margin-bottom-40" id="architectural">
-                <h2 class="section-headings">ARCHITECTURE</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>ARCHITECTURE</h4></div>    
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -121,7 +120,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
@@ -135,8 +133,8 @@
                 </div>
             </section>
             <section class="margin-bottom-40" id="platting">
-                <h2 class="section-headings">PLATTING</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>PLATTING</h4></div>    
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -160,7 +158,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
@@ -174,8 +171,8 @@
                 </div>
             </section>
             <section class="margin-bottom-40" id="structural">
-                <h2 class="section-headings">STRUCTURAL</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>STRUCTURAL</h4></div>    
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -189,7 +186,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
@@ -204,8 +200,8 @@
             </section>
 
             <section class="margin-bottom-40" id="mep">
-                <h2 class="section-headings">MEP</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>MEP</h4></div>
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -220,7 +216,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
@@ -234,8 +229,8 @@
                 </div>
             </section>
             <section class="margin-bottom-40" id="permit">
-                <h2 class="section-headings">PERMIT CO-ORDINATION</h2>
                 <div class="panel panel-default">
+                  <div class="panel-heading"><h4>PERMIT CO-ORDINATION</h4></div>    
                   <div class="panel-body">
                       <div class="row">
                           <div class="col-md-7">
@@ -259,7 +254,6 @@
                               </p>
                           </div>
                           <div class="col-md-5">
-                             <p>Services include:</p> 
                              <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
@@ -288,7 +282,7 @@
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
