pushed changes to header

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <div class="brand">
                     <span>Catalyst Technical Group, INC.</span>
                 </div>
+                <div class="header-contact hidden-sm">
+                    <i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+1 (713) 906-6177">+1 (713) 906-6177</a>
+                </div>
             </div>
         </div>
         
@@ -230,7 +233,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></td>
-                             <td>713-906-6177</td>
+                             <td><a href="tel:+1 (713) 906-6177">+1 (713) 906-6177</a></td>
                          </tr>
                      </tbody>
                     </table>
@@ -238,7 +241,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></td>
-                             <td>info@texasctgroup.com</td>
+                             <td><a href="mailto:info@texasctgroup.com">info@texasctgroup.com</a></td>
                          </tr>
                      </tbody>
                     </table>
@@ -254,7 +257,7 @@
                      <tbody>
                          <tr>
                              <td class="icon"><i class="fa fa-location-arrow fa-2x" aria-hidden="true"></i></td>
-                             <td>400 COBIA DR, SUITE 1503 <br/>KATY, TX 77494</td>
+                             <td><a target="_blank" href="https://www.google.com/maps/place/400+Cobia+Dr+%231503,+Katy,+TX+77494/@29.7745122,-95.7846507,17z/data=!3m1!4b1!4m5!3m4!1s0x864126dd2c660f0f:0x5857038e65f7eca!8m2!3d29.7745122!4d-95.782462">400 Cobia Dr, Suite 1503<br/>Katy, TX 77494</a></td>
                          </tr>
                      </tbody>
                     </table>
