--- a/resources.html
+++ b/resources.html
@@ -28,6 +28,9 @@
                 <div class="brand">
                     <span>Catalyst Technical Group, INC.</span>
                 </div>
+                <div class="header-contact hidden-sm">
+                    <i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+1 (713) 906-6177">+1 (713) 906-6177</a>
+                </div>
             </div>
         </div>
         
