--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <!-- Add custom CSS here -->
     <link href="css/base.css" rel="stylesheet">
@@ -27,6 +28,9 @@
                 </a>
                 <div class="brand">
                     <span>Catalyst Technical Group, INC.</span>
+                </div>
+                <div class="header-contact hidden-sm">
+                    <i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+1 (713) 906-6177">+1 (713) 906-6177</a>
                 </div>
             </div>
         </div>
