added new images and styles

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CTG, INC. - Contact</title>
+    <title>Contact - CTG, INC.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,45 +63,10 @@
         </nav>
     </header>
 
-    <div class="container page-content-section">
-        <div class="row">
-            <div class="col-lg-12">
-                <form role="form" id="formContactUs">
-                    <div class="row">
-                        <div class="form-group col-lg-4">
-                            <label>Name</label>
-                            <input id="txtContactName" name="contact_name" type="text" class="form-control">
-                        </div>
-                        <div class="form-group col-lg-4">
-                            <label>Email Address</label>
-                            <input id="txtContactEmail" name="contact_email" type="email" class="form-control">
-                        </div>
-                        <div class="form-group col-lg-4">
-                            <label>Phone Number</label>
-                            <input id="txtContactPhone" name="contact_phone" type="tel" class="form-control">
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="form-group col-lg-12">
-                            <label>Message</label>
-                            <textarea id="contact_message" name="contact_message" class="form-control" rows="6"></textarea>
-                        </div>
-                        <div class="form-group col-lg-4">
-                            <input type="hidden" name="save" value="contact">
-                            <button id="btnSubmit" type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                        <div id="message" class="alert col-lg-8">
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="box">
-                <div class="col-md-8">
-                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3463.1082182781047!2d-95.78465068518754!3d29.774512181981247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864126dd2c660f0f%3A0xe72845aa4344a036!2s400+Cobia+Dr%2C+Katy%2C+TX+77494!5e0!3m2!1sen!2sus!4v1464485130926" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-                <div class="col-md-4">
+    <div class="container page-content page-content-section">
+        <div class="margin-bottom-40">
+            <div class="row">
+                <div class="col-lg-6">
                     <table class="contact-details">
                      <tbody>
                          <tr>
@@ -110,6 +75,8 @@
                          </tr>
                      </tbody>
                     </table>
+                </div>
+                <div class="col-lg-6">
                     <table class="contact-details">
                      <tbody>
                          <tr>
@@ -118,6 +85,10 @@
                          </tr>
                      </tbody>
                     </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
                     <table class="contact-details">
                      <tbody>
                          <tr>
@@ -126,20 +97,64 @@
                          </tr>
                      </tbody>
                     </table>
+                </div>
+                <div class="col-lg-6">
                     <table class="contact-details">
-                     <tbody>
-                         <tr>
-                             <td class="icon"><i class="fa fa-location-arrow fa-2x" aria-hidden="true"></i></td>
-                             <td><a target="_blank" href="https://www.google.com/maps/place/400+Cobia+Dr+%231503,+Katy,+TX+77494/@29.7745122,-95.7846507,17z/data=!3m1!4b1!4m5!3m4!1s0x864126dd2c660f0f:0x5857038e65f7eca!8m2!3d29.7745122!4d-95.782462">400 Cobia Dr, Suite 1503<br/>Katy, TX 77494</a></td>
-                         </tr>
-                     </tbody>
-                    </table>
+                         <tbody>
+                             <tr>
+                                 <td class="icon"><i class="fa fa-location-arrow fa-2x" aria-hidden="true"></i></td>
+                                 <td><a target="_blank" href="https://www.google.com/maps/place/400+Cobia+Dr+%231503,+Katy,+TX+77494/@29.7745122,-95.7846507,17z/data=!3m1!4b1!4m5!3m4!1s0x864126dd2c660f0f:0x5857038e65f7eca!8m2!3d29.7745122!4d-95.782462">400 Cobia Dr, Suite 1503<br/>Katy, TX 77494</a></td>
+                             </tr>
+                         </tbody>
+                        </table>
+                </div>
+            </div>
+        </div>
+        <div class="row margin-bottom-40">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading"><h4>Email Us</h4></div>
+                  <div class="panel-body">
+                        <form role="form" id="formContactUs">
+                            <div class="row">
+                                <div class="form-group col-lg-4">
+                                    <label>Name</label>
+                                    <input id="txtContactName" name="contact_name" type="text" class="form-control">
+                                </div>
+                                <div class="form-group col-lg-4">
+                                    <label>Email Address</label>
+                                    <input id="txtContactEmail" name="contact_email" type="email" class="form-control">
+                                </div>
+                                <div class="form-group col-lg-4">
+                                    <label>Phone Number</label>
+                                    <input id="txtContactPhone" name="contact_phone" type="tel" class="form-control">
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="form-group col-lg-12">
+                                    <label>Message</label>
+                                    <textarea id="contact_message" name="contact_message" class="form-control" rows="6"></textarea>
+                                </div>
+                                <div class="form-group col-lg-4">
+                                    <input type="hidden" name="save" value="contact">
+                                    <button id="btnSubmit" type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                                <div id="message" class="alert col-lg-8">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="box margin-bottom-40">
+                <div class="col-md-12">
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6926.216449142079!2d-95.782462!3d29.774512000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864126dd2c660f0f%3A0xe72845aa4344a036!2s400+Cobia+Dr%2C+Katy%2C+TX+77494!5e0!3m2!1sen!2sus!4v1465145879413" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
-
     </div>
     <!-- /.container -->
 
