--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>CTG, INC.</title>
 
@@ -64,19 +63,19 @@
 
         </nav>
     </header>
-    <div class="margin-bottom-40">
-        <img class="banner hidden-xs hidden-sm" src="img/banner.jpg"/>
+    <div class="margin-bottom-40 page-content">
+        <img class="banner img-responsive hidden-xs hidden-sm" src="img/banner.jpg"/>
     </div>
-    <div class="container">
+    <div class="container page-content">
         <section>
             <div class="row services">
                 <div class="col-md-4">
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Civil Engineering</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                        <!--    <img class="lazy img-responsive" data-original="img/civil.jpg" alt="" height="180">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/civil.jpg" alt="civil">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -96,9 +95,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Architecture</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                            <!--<img class="lazy img-responsive" data-original="img/architecture.gif" alt="">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/arch.jpg" alt="architecture">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -118,9 +117,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Platting</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                        <!--    <img class="lazy img-responsive" data-original="img/plat.jpg" alt="">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/plat.jpg" alt="platting">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -143,9 +142,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>MEP</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                        <!--    <img class="lazy img-responsive" data-original="img/mep.jpg" alt="">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/mep.jpg" alt="mep">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
@@ -165,9 +164,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Structural</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                        <!--    <img class="lazy img-responsive" data-original="img/structural.jpg" alt="">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/structural.jpg" alt="structural">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Foundation Design</li>
                             <li>Concrete, Steel & Timber Design</li>
@@ -187,9 +186,9 @@
                     <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Permit Co-ordination</h4></div>
                       <div class="panel-body">
-                        <!--<div class="img-stripe-border">-->
-                        <!--    <img class="lazy img-responsive" data-original="img/permit.jpg" alt="">-->
-                        <!--</div>-->
+                        <div class="img-stripe-border">
+                            <img class="lazy img-responsive" data-original="img/services/permit.jpg" alt="permit">
+                        </div>
                         <ul class="list-unstyled">
                             <li>Site Planning & Design</li>
                             <li>Master Plan Development</li>
