--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CTG, INC. - About</title>
+    <title>Projects - CTG, INC. - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
         </nav>
     </header>
 
-    <div class="container page-content-section">
+    <div class="container page-content page-content-section">
         <section>
             <div class="row services">
                 <div class="col-md-4">
