--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CTG, INC. - Services</title>
+    <title>Services - CTG, INC.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
         </nav>
     </header>
     
-    <div class="container page-content-section">
+    <div class="container page-content page-content-section">
         <div class="services-content">
             <section class="margin-bottom-40" id="civil">
                 <div class="panel panel-default">
