--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CTG, INC. - Services</title>
+    <title>Resources - CTG, INC.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
         </nav>
     </header>
 
-    <div class="container page-content-section">
+    <div class="container page-content page-content-section">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
