added mobile banner

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </header>
     <div class="margin-bottom-40 page-content">
         <img class="banner img-responsive hidden-xs hidden-sm" src="img/banner.jpg"/>
+        <img class="banner img-responsive hidden-md hidden-lg" src="img/banner-mobile.jpg"/>
     </div>
     <div class="container page-content">
         <section>
