--- a/index.html
+++ b/index.html
@@ -261,13 +261,14 @@
                          </tr>
                      </tbody>
                     </table>
-                    <!--<p class="contact-information">-->
-                    <!--    <p class="phone"></p>-->
-                    <!--    <p class="email"> </p>-->
-                    <!--    <p class="office-hours"><i class="fa fa-clock-o" aria-hidden="true"></i> </p> <br/>-->
-                    <!--    <p class="address"><i class="fa fa-location-arrow" aria-hidden="true"></i> Address <br/>400 COBIA DR, SUITE 1503 <br/>KATY, TX 77494</p>-->
-                      
-                    <!--</p>-->
+                    <table class="contact-details">
+                     <tbody>
+                         <tr>
+                             <td class="icon"><i class="fa fa-download fa-2x" aria-hidden="true"></i></td>
+                             <td><a href="vCard.vcf">Download vCard</a></td>
+                         </tr>
+                     </tbody>
+                    </table>
                 </div>
             </div>
         </section>
